apps/system/observability/spegel/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: spegel-policy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: spegel

  # This defines the allowed outbound (egress) traffic
  egress:    # 2. Allow peer communication (all nodes)
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: spegel
      toPorts:
        - ports:
            - port: "5000"
              protocol: "TCP"
            - port: "5001"
              protocol: "ANY"
            - port: "6000"
              protocol: "TCP"

    # 3. Allow access to Kubernetes API server
    - toEntities:
        - kube-apiserver
        - host
        - remote-node

    # 4. Allow pulling images from external registries (world)
    - toEntities:
        - "world"
      toPorts:
        - ports:
            - port: "443"
              protocol: "TCP"

  # This defines the allowed inbound (ingress) traffic
  ingress:
    # 1. Allow peer communication
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: spegel
      toPorts:
        - ports:
            - port: "5000"
              protocol: "TCP"
            - port: "5001"
              protocol: "ANY"
            - port: "6000"
              protocol: "TCP"
            - port: "9090"
              protocol: "TCP"

    # 2. Allow Containerd on Host/Nodes to access registry
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "5000"
              protocol: "TCP"

    # 3. Allow Prometheus in observability namespace to scrape metrics
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9090"
              protocol: "TCP"
